# GPT4-AI-resume

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
core/: functions.py  session_state.py
credential/: gptapi_credentials.yaml  linkedin_credentials.yaml  postgre_credentials.yaml
data/: postgre.py  queries.py  settings.py
deploy/ai-resume/: .helmignore  Chart.yaml  values.yaml
deploy/ai-resume/templates/: deployment.yaml  service.yaml
model/: gpt_model.py
oauth/: linkedin.py  oauth.py
