[tool.poetry]
name = "ai-resume"
version = "0.1.0"
description = ""
authors = ["ruo <comsa333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
sqlalchemy = "^2.0.7"
psycopg2-binary = "^2.9.5"
streamlit = "^1.20.0"
openai = "^0.27.2"
pyyaml = "^6.0"
requests = "^2.28.2"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
